# densezip

./: .gitignore  BENCHMARKS.md  Cargo.toml  PLAN.md  README.md  WHITEPAPER.md  install.ps1  install.sh  instructions.md
.github/workflows/: ci.yml  release.yml
bench/: bench.sh  readme_chart.py
src/: archive.rs  backends.rs  channels.rs  cm.rs  cm_tables.rs  lib.rs  main.rs  plan.rs  progress.rs  rebuild.rs  scan.rs  update.rs  util.rs
tests/: roundtrip.rs
